# panda

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: config.rs  embed.rs  ping_pong.rs  state.rs  status.rs
src/: error.rs  lib.rs
src/client/: config.rs  handler.rs  mod.rs  session.rs
src/commands/: index.rs  mod.rs  tests.rs
src/gateway/: heartbeat.rs  mod.rs  process.rs
src/http/: mod.rs  rate_limit.rs  routing.rs
src/models/: emoji.rs  invite.rs  mod.rs  webhook.rs
src/models/channel/: attachment.rs  embed.rs  message.rs  message_application.rs  message_reference.rs  mod.rs  overwrite.rs  reaction.rs
src/models/gateway/: mod.rs  payload.rs
src/models/gateway/commands/: heartbeat.rs  identify.rs  mod.rs  resume.rs  status_update.rs
src/models/gateway/events/: channel_create.rs  channel_delete.rs  channel_pins_update.rs  channel_update.rs  guild_ban.rs  guild_create.rs  guild_delete.rs  guild_emojis_update.rs  guild_integrations_update.rs  guild_member_add.rs  guild_member_remove.rs  guild_member_update.rs  guild_members_chunk.rs  guild_role_create.rs  guild_role_delete.rs  guild_role_update.rs  guild_update.rs  message_create.rs  message_delete.rs  message_delete_bulk.rs  message_reaction_add.rs  message_reaction_remove.rs  message_reaction_remove_all.rs  message_reaction_remove_emoji.rs  message_update.rs  mod.rs  presence_update.rs  ready.rs  typing_start.rs  user_update.rs  voice_server_update.rs  voice_state_update.rs
src/models/gateway/payload/: mod.rs
src/models/guild/: member.rs  mod.rs  role.rs
src/models/user/: activity.rs  mod.rs  status_update.rs
src/models/voice/: mod.rs
src/runtime/: delay.rs  join_handle.rs  mod.rs  websocket.rs
src/utils/: builders.rs
src/utils/builders/: channel_edit.rs  message_edit.rs  mod.rs
