[package]
name = "panda"
version = "0.5.2"
description = "An async Rust library for Discord"
keywords = ["discord", "async", "tokio", "async-std"]
authors = ["Diego Barría <dbarriapaiva@gmail.com>"]
repository = "https://github.com/xyaman/panda"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "tokio-tls", "async-tungstenite/tokio-runtime", "async-tungstenite/tokio-tls"]
async-std-runtime = ["async-std", "async-tls", "async-tungstenite/async-std-runtime", "async-tungstenite/async-tls"]

[dependencies]
# Serde dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.5"

# Async
futures = "0.3.3"
isahc = { version = "0.9.1", features = ["json"] }

flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
url = "2.1.0"
log = "0.4.8"

[dependencies.tokio]
version = "0.2.21"
features = ["time", "tcp"]
# features = ["full"]
optional = true

[dependencies.tokio-tls]
version = "0.3.0"
optional = true

[dependencies.async-std]
version = "1.6.0"
optional = true

[dependencies.async-tls]
version = "0.7.0"
optional = true

[dependencies.async-tungstenite]
version = "0.5.0"