[package]
name = "panda"
version = "0.6"
description = "An async Rust library for Discord"
keywords = ["discord", "async", "tokio", "async-std"]
authors = ["Diego Barría <dbarriapaiva@gmail.com>"]
repository = "https://github.com/xyaman/panda"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
